// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GH #4267 1`] = `
{
  "distances": {
    "fr": {
      "af": 840,
      "af-NA": 840,
      "agq": 840,
      "ak": 840,
      "am": 1340,
      "ar": 1340,
      "ar-AE": 1340,
      "ar-BH": 1340,
      "ar-DJ": 1340,
      "ar-DZ": 1340,
      "ar-EG": 1340,
      "ar-EH": 1340,
      "ar-ER": 1340,
      "ar-IL": 1340,
      "ar-IQ": 1340,
      "ar-JO": 1340,
      "ar-KM": 1340,
      "ar-KW": 1340,
      "ar-LB": 1340,
      "ar-LY": 1340,
      "ar-MA": 1340,
      "ar-MR": 1340,
      "ar-OM": 1340,
      "ar-PS": 1340,
      "ar-QA": 1340,
      "ar-SA": 1340,
      "ar-SD": 1340,
      "ar-SO": 1340,
      "ar-SS": 1340,
      "ar-SY": 1340,
      "ar-TD": 1340,
      "ar-TN": 1340,
      "ar-YE": 1340,
      "as": 1340,
      "asa": 840,
      "ast": 840,
      "az": 840,
      "az-Cyrl": 1340,
      "az-Latn": 840,
      "bas": 840,
      "be": 1340,
      "be-tarask": 1340,
      "bem": 840,
      "bez": 840,
      "bg": 1340,
      "bm": 840,
      "bn": 1340,
      "bn-IN": 1340,
      "bo": 1340,
      "bo-IN": 1340,
      "br": 200,
      "brx": 1340,
      "bs": 840,
      "bs-Cyrl": 1340,
      "bs-Latn": 840,
      "ca": 840,
      "ca-AD": 840,
      "ca-ES-valencia": 840,
      "ca-FR": 800,
      "ca-IT": 840,
      "ccp": 1340,
      "ccp-IN": 1340,
      "ce": 1340,
      "ceb": 840,
      "cgg": 840,
      "chr": 1340,
      "ckb": 1340,
      "ckb-IR": 1340,
      "cs": 840,
      "cy": 840,
      "da": 840,
      "da-GL": 840,
      "dav": 840,
      "de": 840,
      "de-AT": 840,
      "de-BE": 840,
      "de-CH": 840,
      "de-IT": 840,
      "de-LI": 840,
      "de-LU": 840,
      "dje": 840,
      "doi": 1340,
      "dsb": 840,
      "dua": 840,
      "dyo": 840,
      "dz": 1340,
      "ebu": 840,
      "ee": 840,
      "ee-TG": 840,
      "el": 1340,
      "el-CY": 1340,
      "en": 838,
      "en-001": 839,
      "en-150": 839,
      "en-AE": 839,
      "en-AG": 839,
      "en-AI": 839,
      "en-AS": 839,
      "en-AT": 839,
      "en-AU": 839,
      "en-BB": 839,
      "en-BE": 839,
      "en-BI": 839,
      "en-BM": 839,
      "en-BS": 839,
      "en-BW": 839,
      "en-BZ": 839,
      "en-CA": 839,
      "en-CC": 839,
      "en-CH": 839,
      "en-CK": 839,
      "en-CM": 839,
      "en-CX": 839,
      "en-CY": 839,
      "en-DE": 839,
      "en-DG": 839,
      "en-DK": 839,
      "en-DM": 839,
      "en-ER": 839,
      "en-FI": 839,
      "en-FJ": 839,
      "en-FK": 839,
      "en-FM": 839,
      "en-GB": 838,
      "en-GD": 839,
      "en-GG": 839,
      "en-GH": 839,
      "en-GI": 839,
      "en-GM": 839,
      "en-GU": 839,
      "en-GY": 839,
      "en-HK": 839,
      "en-IE": 839,
      "en-IL": 839,
      "en-IM": 839,
      "en-IN": 839,
      "en-IO": 839,
      "en-JE": 839,
      "en-JM": 839,
      "en-KE": 839,
      "en-KI": 839,
      "en-KN": 839,
      "en-KY": 839,
      "en-LC": 839,
      "en-LR": 839,
      "en-LS": 839,
      "en-MG": 839,
      "en-MH": 839,
      "en-MO": 839,
      "en-MP": 839,
      "en-MS": 839,
      "en-MT": 839,
      "en-MU": 839,
      "en-MW": 839,
      "en-MY": 839,
      "en-NA": 839,
      "en-NF": 839,
      "en-NG": 839,
      "en-NL": 839,
      "en-NR": 839,
      "en-NU": 839,
      "en-NZ": 839,
      "en-PG": 839,
      "en-PH": 839,
      "en-PK": 839,
      "en-PN": 839,
      "en-PR": 839,
      "en-PW": 839,
      "en-RW": 839,
      "en-SB": 839,
      "en-SC": 839,
      "en-SD": 839,
      "en-SE": 839,
      "en-SG": 839,
      "en-SH": 839,
      "en-SI": 839,
      "en-SL": 839,
      "en-SS": 839,
      "en-SX": 839,
      "en-SZ": 839,
      "en-TC": 839,
      "en-TK": 839,
      "en-TO": 839,
      "en-TT": 839,
      "en-TV": 839,
      "en-TZ": 839,
      "en-UG": 839,
      "en-UM": 839,
      "en-VC": 839,
      "en-VG": 839,
      "en-VI": 839,
      "en-VU": 839,
      "en-WS": 839,
      "en-ZA": 839,
      "en-ZM": 839,
      "en-ZW": 839,
      "eo": 840,
      "es": 838,
      "es-419": 838,
      "es-AR": 839,
      "es-BO": 839,
      "es-BR": 839,
      "es-BZ": 839,
      "es-CL": 839,
      "es-CO": 839,
      "es-CR": 839,
      "es-CU": 839,
      "es-DO": 839,
      "es-EA": 839,
      "es-EC": 839,
      "es-GQ": 839,
      "es-GT": 839,
      "es-HN": 839,
      "es-IC": 839,
      "es-MX": 839,
      "es-NI": 839,
      "es-PA": 839,
      "es-PE": 839,
      "es-PH": 839,
      "es-PR": 839,
      "es-PY": 839,
      "es-SV": 839,
      "es-US": 839,
      "es-UY": 839,
      "es-VE": 839,
      "et": 840,
      "eu": 840,
      "ewo": 840,
      "fa": 1340,
      "fa-AF": 1340,
      "ff": 840,
      "ff-Adlm": 1340,
      "ff-Adlm-BF": 1340,
      "ff-Adlm-CM": 1340,
      "ff-Adlm-GH": 1340,
      "ff-Adlm-GM": 1340,
      "ff-Adlm-GW": 1340,
      "ff-Adlm-LR": 1340,
      "ff-Adlm-MR": 1340,
      "ff-Adlm-NE": 1340,
      "ff-Adlm-NG": 1340,
      "ff-Adlm-SL": 1340,
      "ff-Adlm-SN": 1340,
      "ff-Latn": 840,
      "ff-Latn-BF": 840,
      "ff-Latn-CM": 840,
      "ff-Latn-GH": 840,
      "ff-Latn-GM": 840,
      "ff-Latn-GN": 840,
      "ff-Latn-GW": 840,
      "ff-Latn-LR": 840,
      "ff-Latn-MR": 840,
      "ff-Latn-NE": 840,
      "ff-Latn-NG": 840,
      "ff-Latn-SL": 840,
      "fi": 840,
      "fil": 840,
      "fo": 840,
      "fo-DK": 840,
      "fr": 0,
      "fr-BE": 40,
      "fr-BF": 40,
      "fr-BI": 40,
      "fr-BJ": 40,
      "fr-BL": 40,
      "fr-CA": 40,
      "fr-CD": 40,
      "fr-CF": 40,
      "fr-CG": 40,
      "fr-CH": 40,
      "fr-CI": 40,
      "fr-CM": 40,
      "fr-DJ": 40,
      "fr-DZ": 40,
      "fr-GA": 40,
      "fr-GF": 40,
      "fr-GN": 40,
      "fr-GP": 40,
      "fr-GQ": 40,
      "fr-HT": 40,
      "fr-KM": 40,
      "fr-LU": 40,
      "fr-MA": 40,
      "fr-MC": 40,
      "fr-MF": 40,
      "fr-MG": 40,
      "fr-ML": 40,
      "fr-MQ": 40,
      "fr-MR": 40,
      "fr-MU": 40,
      "fr-NC": 40,
      "fr-NE": 40,
      "fr-PF": 40,
      "fr-PM": 40,
      "fr-RE": 40,
      "fr-RW": 40,
      "fr-SC": 40,
      "fr-SN": 40,
      "fr-SY": 40,
      "fr-TD": 40,
      "fr-TG": 40,
      "fr-TN": 40,
      "fr-VU": 40,
      "fr-WF": 40,
      "fr-YT": 40,
      "fur": 840,
      "fy": 840,
      "ga": 840,
      "ga-GB": 840,
      "gd": 840,
      "gl": 840,
      "gsw": 840,
      "gsw-FR": 800,
      "gsw-LI": 840,
      "gu": 1340,
      "guz": 840,
      "gv": 840,
      "ha": 840,
      "ha-GH": 840,
      "ha-NE": 840,
      "haw": 840,
      "he": 1340,
      "hi": 1340,
      "hr": 840,
      "hr-BA": 840,
      "hsb": 840,
      "hu": 840,
      "hy": 1340,
      "ia": 840,
      "id": 840,
      "ig": 840,
      "ii": 1340,
      "is": 840,
      "it": 840,
      "it-CH": 840,
      "it-SM": 840,
      "it-VA": 840,
      "ja": 1340,
      "jgo": 840,
      "jmc": 840,
      "jv": 840,
      "ka": 1340,
      "kab": 840,
      "kam": 840,
      "kde": 840,
      "kea": 840,
      "kgp": 840,
      "khq": 840,
      "ki": 840,
      "kk": 1340,
      "kkj": 840,
      "kl": 840,
      "kln": 840,
      "km": 1340,
      "kn": 1340,
      "ko": 1340,
      "ko-KP": 1340,
      "kok": 1340,
      "ks": 1340,
      "ks-Arab": 1340,
      "ksb": 840,
      "ksf": 840,
      "ksh": 840,
      "ku": 840,
      "kw": 840,
      "ky": 1340,
      "lag": 840,
      "lb": 840,
      "lg": 840,
      "lkt": 840,
      "ln": 340,
      "ln-AO": 340,
      "ln-CF": 340,
      "ln-CG": 340,
      "lo": 1340,
      "lrc": 1340,
      "lrc-IQ": 1340,
      "lt": 840,
      "lu": 840,
      "luo": 840,
      "luy": 840,
      "lv": 840,
      "mai": 1340,
      "mas": 840,
      "mas-TZ": 840,
      "mer": 840,
      "mfe": 840,
      "mg": 340,
      "mgh": 840,
      "mgo": 840,
      "mi": 840,
      "mk": 1340,
      "ml": 1340,
      "mn": 1340,
      "mni": 1340,
      "mni-Beng": 1340,
      "mr": 1340,
      "ms": 840,
      "ms-BN": 840,
      "ms-ID": 840,
      "ms-SG": 840,
      "mt": 840,
      "mua": 840,
      "my": 1340,
      "mzn": 1340,
      "naq": 840,
      "nb": 840,
      "nb-SJ": 840,
      "nd": 840,
      "nds": 840,
      "nds-NL": 840,
      "ne": 1340,
      "ne-IN": 1340,
      "nl": 840,
      "nl-AW": 840,
      "nl-BE": 840,
      "nl-BQ": 840,
      "nl-CW": 840,
      "nl-SR": 840,
      "nl-SX": 840,
      "nmg": 840,
      "nn": 840,
      "nnh": 840,
      "no": 840,
      "nus": 840,
      "nyn": 840,
      "om": 840,
      "om-KE": 840,
      "or": 1340,
      "os": 1340,
      "os-RU": 1340,
      "pa": 1340,
      "pa-Arab": 1340,
      "pa-Guru": 1340,
      "pcm": 840,
      "pl": 840,
      "ps": 1340,
      "ps-PK": 1340,
      "pt": 839,
      "pt-AO": 840,
      "pt-CH": 840,
      "pt-CV": 840,
      "pt-GQ": 840,
      "pt-GW": 840,
      "pt-LU": 840,
      "pt-MO": 840,
      "pt-MZ": 840,
      "pt-PT": 839,
      "pt-ST": 840,
      "pt-TL": 840,
      "qu": 840,
      "qu-BO": 840,
      "qu-EC": 840,
      "rm": 840,
      "rn": 840,
      "ro": 840,
      "ro-MD": 840,
      "rof": 840,
      "ru": 1340,
      "ru-BY": 1340,
      "ru-KG": 1340,
      "ru-KZ": 1340,
      "ru-MD": 1340,
      "ru-UA": 1340,
      "rw": 340,
      "rwk": 840,
      "sa": 1340,
      "sah": 1340,
      "saq": 840,
      "sat": 1340,
      "sat-Olck": 1340,
      "sbp": 840,
      "sc": 840,
      "sd": 1340,
      "sd-Arab": 1340,
      "sd-Deva": 1340,
      "se": 840,
      "se-FI": 840,
      "se-SE": 840,
      "seh": 840,
      "ses": 840,
      "sg": 840,
      "shi": 1340,
      "shi-Latn": 840,
      "shi-Tfng": 1340,
      "si": 1340,
      "sk": 840,
      "sl": 840,
      "smn": 840,
      "sn": 840,
      "so": 840,
      "so-DJ": 840,
      "so-ET": 840,
      "so-KE": 840,
      "sq": 840,
      "sq-MK": 840,
      "sq-XK": 840,
      "sr": 1340,
      "sr-Cyrl": 1340,
      "sr-Cyrl-BA": 1340,
      "sr-Cyrl-ME": 1340,
      "sr-Cyrl-XK": 1340,
      "sr-Latn": 840,
      "sr-Latn-BA": 840,
      "sr-Latn-ME": 840,
      "sr-Latn-XK": 840,
      "su": 840,
      "su-Latn": 840,
      "sv": 840,
      "sv-AX": 840,
      "sv-FI": 840,
      "sw": 840,
      "sw-CD": 840,
      "sw-KE": 840,
      "sw-UG": 840,
      "ta": 1340,
      "ta-LK": 1340,
      "ta-MY": 1340,
      "ta-SG": 1340,
      "te": 1340,
      "teo": 840,
      "teo-KE": 840,
      "tg": 1340,
      "th": 1340,
      "ti": 1340,
      "ti-ER": 1340,
      "tk": 840,
      "to": 840,
      "tr": 840,
      "tr-CY": 840,
      "tt": 1340,
      "twq": 840,
      "tzm": 840,
      "ug": 1340,
      "uk": 1340,
      "und": 838,
      "ur": 1340,
      "ur-IN": 1340,
      "uz": 840,
      "uz-Arab": 1340,
      "uz-Cyrl": 1340,
      "uz-Latn": 840,
      "vai": 1340,
      "vai-Latn": 840,
      "vai-Vaii": 1340,
      "vi": 840,
      "vun": 840,
      "wae": 840,
      "wo": 340,
      "xh": 840,
      "xog": 840,
      "yav": 840,
      "yi": 1340,
      "yo": 840,
      "yo-BJ": 840,
      "yrl": 840,
      "yrl-CO": 840,
      "yrl-VE": 840,
      "yue": 1340,
      "yue-Hans": 1340,
      "yue-Hant": 1340,
      "zgh": 1340,
      "zh": 1340,
      "zh-Hans": 1340,
      "zh-Hans-HK": 1340,
      "zh-Hans-MO": 1340,
      "zh-Hans-SG": 1340,
      "zh-Hant": 1340,
      "zh-Hant-HK": 1340,
      "zh-Hant-MO": 1340,
      "zu": 840,
    },
  },
  "matchedDesiredLocale": "fr",
  "matchedSupportedLocale": "fr",
}
`;

exports[`findBestMatch 1`] = `
{
  "distances": {
    "en-US": {
      "en-US": 0,
    },
  },
  "matchedDesiredLocale": "en-US",
  "matchedSupportedLocale": "en-US",
}
`;

exports[`findBestMatch 2`] = `
{
  "distances": {
    "sr-Latn-BA": {
      "bs": 800,
      "sh": 40,
    },
  },
  "matchedDesiredLocale": "sr-Latn-BA",
  "matchedSupportedLocale": "sh",
}
`;

exports[`findBestMatch 3`] = `
{
  "distances": {
    "fr-XX": {
      "en": 838,
      "fr": 40,
    },
  },
  "matchedDesiredLocale": "fr-XX",
  "matchedSupportedLocale": "fr",
}
`;

exports[`findBestMatch 4`] = `
{
  "distances": {
    "zh-TW": {
      "zh": 540,
      "zh-Hant": 0,
    },
  },
  "matchedDesiredLocale": "zh-TW",
  "matchedSupportedLocale": "zh-Hant",
}
`;

exports[`findBestMatch 5`] = `
{
  "distances": {
    "th-u-ca-gregory": {
      "th": 0,
    },
  },
  "matchedDesiredLocale": "th-u-ca-gregory",
  "matchedSupportedLocale": "th",
}
`;

exports[`findBestMatch 6`] = `
{
  "distances": {
    "es-co": {
      "en": 839,
      "es-419": 39,
    },
  },
  "matchedDesiredLocale": "es-co",
  "matchedSupportedLocale": "es-419",
}
`;

exports[`findBestMatch 7`] = `
{
  "distances": {
    "es-co": {
      "en": 839,
      "es": 49,
      "es-419": 39,
    },
  },
  "matchedDesiredLocale": "es-co",
  "matchedSupportedLocale": "es-419",
}
`;

exports[`findBestMatch 8`] = `
{
  "distances": {
    "pt-mz": {
      "pt-BR": 49,
      "pt-PT": 39,
    },
  },
  "matchedDesiredLocale": "pt-mz",
  "matchedSupportedLocale": "pt-PT",
}
`;

exports[`findBestMatch 9`] = `
{
  "distances": {
    "de-DE": {
      "en": 838,
      "en-US": 838,
      "fr-FR": 840,
    },
    "fr-FR": {
      "en": 878,
      "en-US": 878,
      "fr-FR": 40,
    },
  },
  "matchedDesiredLocale": "fr-FR",
  "matchedSupportedLocale": "fr-FR",
}
`;
